--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,186 @@
 </head>
 
 <body>
+    <header class="header">
+        <div class="header_wrapper">
+            <img src="img/header_logo.svg" alt="logo">
+            <ul class="header_menu">
+                <li class="header_menu_item">
+                    <a href="#" class="header_menu_link">Vision</a>
+                </li>
+                <li class="header_menu_item">
+                    <a href="#" class="header_menu_link">Success factors</a>
+                </li>
+                <li class="header_menu_item">
+                    <a href="#" class="header_menu_link">Team</a>
+                </li>
+                <li class="header_menu_item">
+                    <a href="#" class="header_menu_link">Projects</a>
+                </li>
+                <li class="header_menu_item">
+                    <a href="#" class="header_menu_link">Geography</a>
+                </li>
+                <li class="header_menu_item">
+                    <a href="#" class="header_menu_link">Contacts</a>
+                </li>
+            </ul>
+        </div>
+    </header>
+    <section class="promo">
+        <img src="img/promo_logo.svg" alt="logo" class="promo_logo">
+        <div class="promo_arrow"></div>
+    </section>
+    <section class="vision">
+        <div class="container">
+            <h1 class="vision_title">Our Vision</h1>
+            <div class="vision_formula">
+                <div class="vision_formula_borders">
+                    <div class="vision_formula_item">
+                        High potential
+                        local companies
+                    </div>
+                </div>
+                <img src="img/plus.svg" alt="plus">
+                <div class="vision_formula_borders">
+                    <div class="vision_formula_item" id="second_item">
+                        Expertise
+                        <div class="unique_line">Investments</div>
+                        Connections
+                    </div>
+                </div>
+                <img src="img/equals.svg" alt="equals">
+                <div class="vision_formula_borders">
+                    <div class="vision_formula_item">
+                        Scale to the
+                        global level
+                    </div>
+                </div>
+            </div>
+            <div class="vision_desc">
+                Our vision is to bring not only financial input, but to deliver deep expertise, fundamental knowledge to the high-potential projects to deliver scalability to world-changing ideas.
+            </div>
+        </div>
+    </section>
+    <section class="factors">
+        <div class="container">
+            <div class="factors_border">
+                <div class="factors_content">
+                    <h1 class="factors_title">Our success factors </h1>
+                    <div class="factors_wrapper">
+                        <div class="factors_item">
+                            <img src="img/factor_one.svg" alt="factor_one" class="factors_item_img">
+                            <div class="factors_item_title">Future economy expertise</div>
+                            <div class="factors_item_desc">
+                                We inspire businesses to create efficient business strategies for the future economy powered by modern technology, particularly artificial intelligence and blockchain.
+                            </div>
+                        </div>
+                        <div class="factors_item">
+                            <img src="img/factor_two.svg" alt="factor_two" class="factors_item_img">
+                            <div class="factors_item_title">Operational efficiency</div>
+                            <div class="factors_item_desc">
+                                We empower businesses with the best practices to strengthen the supply chain, bringing excellence to integration, operations, purchasing and distribution.
+                            </div>
+                        </div>
+                        <div class="factors_item">
+                            <img src="img/factor_three.svg" alt="factor_three" class="factors_item_img">
+                            <div class="factors_item_title">Scalability <br> excellence</div>
+                            <div class="factors_item_desc">
+                                We help businesses to scale by providing new business opportunities, supporting steady and effective expansion
+                                to the global market.
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="team">
+        <div class="container">
+            <h1 class="team_title">Our team</h1>
+            <div class="team_wrapper">
+                <div class="team_item">
+                    <img src="img/team_one.svg" alt="team_one">
+                    <div class="team_text">
+                        <div class="team_text_title">Abdumalik Mirakhmedov</div>
+                        <div class="divider"></div>
+                        <div class="team_text_desc">global finance <br>
+                            / strategy</div>
+                    </div>
+                </div>
+                <div class="team_item">
+                    <img src="img/team_two.svg" alt="team_two">
+                    <div class="team_text">
+                        <div class="team_text_title">Rahsit Makhat</div>
+                        <div class="divider"></div>
+                        <div class="team_text_desc">technology <br>
+                            / strategy</div>
+                    </div>
+                </div>
+                <div class="team_item">
+                    <img src="img/team_three.svg" alt="team_three">
+                    <div class="team_text">
+                        <div class="team_text_title">Andrey
+                            Kim</div>
+                        <div class="divider"></div>
+                        <div class="team_text_desc">operational efficience <br>/ technology</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="projects">
+        <div class="container">
+            <h1 class="projects_title">Our projects</h1>
+            <h1 class="projects_subtitle">Frontier (IT)</h1>
+            <div class="projects_company single_company" style="margin-top: 32px">
+                <img src="img/scalo.svg" alt="scalo" class="projects_img">
+                <div class="projects_arrow"></div>
+            </div>
+            <div class="projects_companies">
+                <div class="projects_company">
+                    <img src="img/handl.svg" alt="handl" class="projects_img">
+                    <div class="projects_arrow"></div>
+                </div>
+                <div class="projects_company">
+                    <img src="img/voctiv.svg" alt="voctiv" class="projects_img">
+                    <div class="projects_arrow"></div>
+                </div>
+                <div class="projects_company">
+                    <img src="img/megarender.svg" alt="megarender" class="projects_img">
+                    <div class="projects_arrow"></div>
+                </div>
+            </div>
+            <div class="projects_companies no_line" style="margin-top: 150px">
+                <div class="projects_subcompany">
+                    <h1 class="projects_subtitle" style="margin-top: unset; margin-bottom: 56px">Shared Economy <br>
+                        Real Estate</h1>
+                    <div class="projects_company no_line">
+                        <img src="img/town_x.svg" alt="town_x" class="projects_img">
+                        <div class="projects_arrow"></div>
+                    </div>
+                </div>
+                <div class="projects_subcompany">
+                    <h1 class="projects_subtitle" style="margin-top: unset; margin-bottom: 73px">High-Load <br>Infrastructure</h1>
+                    <div class="projects_company no_line">
+                        <img src="img/genesis.svg" alt="genesis" class="projects_img">
+                        <div class="projects_arrow"></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+<!--    FIXME temporary empty-->
+    <section class="network">
+        <div class="container">
+            <h1 class="network_title">Our global network</h1>
+        </div>
+    </section>
+    <footer class="footer">
+        <h1 class="footer_title">Contacts</h1>
+        <h2 class="footer_subtitle">Burj Khalifa, 1 Emaar Boulevard, Downtown Dubai Dubai, United Arab Emirates</h2>
+        <div class="footer_divider"></div>
+        <h2 class="footer_subtitle" style="margin: unset">+9 (714) 777 77 77 | +9 (714) 555 55 55</h2>
+    </footer>
     <script src="js/bundle.js"></script>
 </body>
 
