sleepless night work

--- a/src/index.html
+++ b/src/index.html
@@ -5,41 +5,88 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.min.css">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/styleeee.min.css">
+    <title>The Paragon</title>
 </head>
 
 <body>
     <header class="header">
         <div class="header_wrapper">
             <img src="img/header_logo.svg" alt="logo">
+
             <ul class="header_menu">
                 <li class="header_menu_item">
-                    <a href="#" class="header_menu_link">Vision</a>
+                    <a href="#vision" class="header_menu_link">Vision</a>
                 </li>
                 <li class="header_menu_item">
-                    <a href="#" class="header_menu_link">Success factors</a>
+                    <a href="#factors" class="header_menu_link">Success factors</a>
                 </li>
                 <li class="header_menu_item">
-                    <a href="#" class="header_menu_link">Team</a>
+                    <a href="#team" class="header_menu_link">Team</a>
                 </li>
                 <li class="header_menu_item">
-                    <a href="#" class="header_menu_link">Projects</a>
+                    <a href="#projects" class="header_menu_link">Projects</a>
                 </li>
                 <li class="header_menu_item">
-                    <a href="#" class="header_menu_link">Geography</a>
+                    <a href="#geography" class="header_menu_link">Geography</a>
                 </li>
                 <li class="header_menu_item">
-                    <a href="#" class="header_menu_link">Contacts</a>
+                    <a href="#contacts" class="header_menu_link">Contacts</a>
                 </li>
             </ul>
+            <div class="menu_burger">
+                <div class="menu_burger_lines"></div>
+                <div class="menu_burger_lines"></div>
+                <div class="menu_burger_lines"></div>
+            </div>
+            <div class="side_menu ">
+                <ul class="side_menu_wrapper">
+                    <li class="side_menu_item">
+                        <a href="#vision" class="side_menu_link">Vision</a>
+                    </li>
+                    <li class="side_menu_item">
+                        <a href="#factors" class="side_menu_link">Success factors</a>
+                    </li>
+                    <li class="side_menu_item">
+                        <a href="#team" class="side_menu_link">Team</a>
+                    </li>
+                    <li class="side_menu_item">
+                        <a href="#projects" class="side_menu_link">Projects</a>
+                    </li>
+                    <li class="side_menu_item">
+                        <a href="#geography" class="side_menu_link">Geography</a>
+                    </li>
+                    <li class="side_menu_item">
+                        <a href="#contacts" class="side_menu_link">Contacts</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </header>
     <section class="promo">
-        <img src="img/promo_logo.svg" alt="logo" class="promo_logo">
-        <div class="promo_arrow"></div>
+        <div class="promo_slider">
+            <div class="promo_slider_wrapper">
+<!--                <div class="promo_slider_item ">-->
+<!--                    <img src="img/promo_logo.svg" alt="logo" class="promo_logo">-->
+<!--                </div>-->
+                <div class="promo_slider_item active">
+<!--                    <h1 class="promo_title">Paragon</h1>-->
+<!--                    <div class="promo_divider"></div>-->
+                    <div class="promo_desc">
+                        We empower businesses with <div class="promo_desc_marked">tomorrow economy expertise</div> for sustainable growth to create <div class="promo_desc_marked">long term value</div> for our investors
+                    </div>
+                    <div class="promo_subtitle">
+                        Who we are
+                    </div>
+                    <div class="promo_subdesc">
+                        Paragon is a family office, specializing in active wealth management. We maximize return on investment by bringing our deep expertise into strategic and operational management.
+                    </div>
+                </div>
+            </div>
+        </div>
+<!--        <div class="promo_arrow"></div>-->
     </section>
-    <section class="vision">
+    <section class="vision" id="vision">
         <div class="container">
             <h1 class="vision_title">Our Vision</h1>
             <div class="vision_formula">
@@ -70,7 +117,7 @@
             </div>
         </div>
     </section>
-    <section class="factors">
+    <section class="factors" id="factors">
         <div class="container">
             <div class="factors_border">
                 <div class="factors_content">
@@ -80,7 +127,7 @@
                             <img src="img/factor_one.svg" alt="factor_one" class="factors_item_img">
                             <div class="factors_item_title">Future economy expertise</div>
                             <div class="factors_item_desc">
-                                We inspire businesses to create efficient business strategies for the future economy powered by modern technology, particularly artificial intelligence and blockchain.
+                                We inspire businesses to create efficient business strategies for the future economy powered by high-end technology and collaborative consumption.
                             </div>
                         </div>
                         <div class="factors_item">
@@ -103,7 +150,7 @@
             </div>
         </div>
     </section>
-    <section class="team">
+    <section class="team" id="team">
         <div class="container">
             <h1 class="team_title">Our team</h1>
             <div class="team_wrapper">
@@ -125,71 +172,113 @@
                             / strategy</div>
                     </div>
                 </div>
-                <div class="team_item">
-                    <img src="img/team_three.svg" alt="team_three">
-                    <div class="team_text">
-                        <div class="team_text_title">Andrey
-                            Kim</div>
-                        <div class="divider"></div>
-                        <div class="team_text_desc">operational efficience <br>/ technology</div>
-                    </div>
-                </div>
+<!--                <div class="team_item">-->
+<!--                    <img src="img/team_three.svg" alt="team_three">-->
+<!--                    <div class="team_text">-->
+<!--                        <div class="team_text_title">Andrey-->
+<!--                            Kim</div>-->
+<!--                        <div class="divider"></div>-->
+<!--                        <div class="team_text_desc">operational efficience <br>/ technology</div>-->
+<!--                    </div>-->
+<!--                </div>-->
             </div>
         </div>
     </section>
-    <section class="projects">
+    <section class="projects" id="projects">
         <div class="container">
-            <h1 class="projects_title">Our projects</h1>
-            <h1 class="projects_subtitle">Frontier (IT)</h1>
-            <div class="projects_company single_company" style="margin-top: 32px">
-                <img src="img/scalo.svg" alt="scalo" class="projects_img">
-                <div class="projects_arrow"></div>
-            </div>
-            <div class="projects_companies">
-                <div class="projects_company">
-                    <img src="img/handl.svg" alt="handl" class="projects_img">
-                    <div class="projects_arrow"></div>
-                </div>
-                <div class="projects_company">
-                    <img src="img/voctiv.svg" alt="voctiv" class="projects_img">
-                    <div class="projects_arrow"></div>
-                </div>
-                <div class="projects_company">
-                    <img src="img/megarender.svg" alt="megarender" class="projects_img">
-                    <div class="projects_arrow"></div>
-                </div>
-            </div>
-            <div class="projects_companies no_line" style="margin-top: 150px">
-                <div class="projects_subcompany">
-                    <h1 class="projects_subtitle" style="margin-top: unset; margin-bottom: 56px">Shared Economy <br>
-                        Real Estate</h1>
-                    <div class="projects_company no_line">
-                        <img src="img/town_x.svg" alt="town_x" class="projects_img">
-                        <div class="projects_arrow"></div>
+            <h1 class="projects_title">Our investments</h1>
+            <div class="projects_wrapper">
+                <div class="projects_block">
+                    <div class="projects_company_v2">
+                        <img src="img/handl.svg" alt="handl" class="projects_img">
+                    </div>
+                    <div class="projects_divider"></div>
+                    <div class="projects_company_v2">
+                        <img src="img/scalo.svg" alt="scalo" class="projects_img">
                     </div>
                 </div>
-                <div class="projects_subcompany">
-                    <h1 class="projects_subtitle" style="margin-top: unset; margin-bottom: 73px">High-Load <br>Infrastructure</h1>
-                    <div class="projects_company no_line">
+
+                <div class="projects_block">
+                    <div class="projects_company_v2">
                         <img src="img/genesis.svg" alt="genesis" class="projects_img">
-                        <div class="projects_arrow"></div>
+                    </div>
+                    <div class="projects_divider"></div>
+                    <div class="projects_company_v2">
+                        <img src="img/megarender.svg" alt="megarender" class="projects_img">
+                    </div>
+                </div>
+
+
+                <div class="projects_block">
+                    <div class="projects_company_v2">
+                        <img src="img/town_x.svg" alt="town_x" class="projects_img">
+                    </div>
+                    <div class="projects_divider"></div>
+                    <div class="projects_company_v2">
+                        <img src="img/voctiv.svg" alt="voctiv" class="projects_img">
                     </div>
                 </div>
             </div>
+<!--            <h1 class="projects_subtitle">Frontier (IT)</h1>-->
+<!--            <div class="projects_company single_company" style="margin-top: 32px">-->
+<!--                <img src="img/scalo.svg" alt="scalo" class="projects_img">-->
+<!--                <div class="projects_arrow"></div>-->
+<!--            </div>-->
+<!--            <div class="projects_companies">-->
+<!--                <div class="projects_company">-->
+<!--                    <img src="img/handl.svg" alt="handl" class="projects_img">-->
+<!--                    <div class="projects_arrow"></div>-->
+<!--                </div>-->
+<!--                <div class="projects_company">-->
+<!--                    <img src="img/voctiv.svg" alt="voctiv" class="projects_img">-->
+<!--                    <div class="projects_arrow"></div>-->
+<!--                </div>-->
+<!--                <div class="projects_company">-->
+<!--                    <img src="img/megarender.svg" alt="megarender" class="projects_img">-->
+<!--                    <div class="projects_arrow"></div>-->
+<!--                </div>-->
+<!--            </div>-->
+<!--            <div class="projects_companies no_line" style="margin-top: 150px">-->
+<!--                <div class="projects_subcompany">-->
+<!--                    <h1 class="projects_subtitle" style="margin-top: unset; margin-bottom: 56px">Shared Economy <br>-->
+<!--                        Real Estate</h1>-->
+<!--                    <div class="projects_company no_line">-->
+<!--                        <img src="img/town_x.svg" alt="town_x" class="projects_img">-->
+<!--                        <div class="projects_arrow"></div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--                <div class="projects_subcompany">-->
+<!--                    <h1 class="projects_subtitle" style="margin-top: unset; margin-bottom: 73px">High-Load <br>Infrastructure</h1>-->
+<!--                    <div class="projects_company no_line">-->
+<!--                        <img src="img/genesis.svg" alt="genesis" class="projects_img">-->
+<!--                        <div class="projects_arrow"></div>-->
+<!--                    </div>-->
+<!--                </div>-->
+<!--            </div>-->
         </div>
     </section>
 <!--    FIXME temporary empty-->
-    <section class="network">
+    <section class="network" id="geography">
         <div class="container">
             <h1 class="network_title">Our global network</h1>
+            <div class="network_globe_container">
+                <div id="myearth" class="earth-container"></div>
+            </div>
+            <div class="network_popup">
+                <h1 class="network_popup_title">Dubai</h1>
+                <div class="network_popup_desc">Burj Khalifa, 1 Emaar Boulevard, Downtown Dubai Dubai, United Arab Emirates</div>
+                <div class="network_popup_phone">+9 (714) 777 77 77 <br> +9 (714) 555 55 55</div>
+            </div>
         </div>
     </section>
-    <footer class="footer">
+    <footer class="footer" id="contacts">
         <h1 class="footer_title">Contacts</h1>
-        <h2 class="footer_subtitle">Burj Khalifa, 1 Emaar Boulevard, Downtown Dubai Dubai, United Arab Emirates</h2>
+        <h2 class="footer_subtitle">Opus Tower, office B1501, Business Bay, Dubai, UAE</h2>
         <div class="footer_divider"></div>
-        <h2 class="footer_subtitle" style="margin: unset">+9 (714) 777 77 77 | +9 (714) 555 55 55</h2>
+        <h2 class="footer_subtitle" style="margin: unset">info@paragongroup.ae</h2>
     </footer>
+    <script src="js/miniature.earth.js"></script>
+<!--    <script src="js/miniature.earth.core.js"></script>-->
     <script src="js/bundle.js"></script>
 </body>
 
