Media (small fixes) Added description for team members

--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
 
 <head>
     <meta charset="UTF-8">
@@ -96,7 +96,7 @@
                         local companies
                     </div>
                 </div>
-                <img src="img/plus.svg" alt="plus">
+                <img class='vision_formula_images'src="img/plus.svg" alt="plus">
                 <div class="vision_formula_borders">
                     <div class="vision_formula_item" id="second_item">
                         Expertise
@@ -104,7 +104,7 @@
                         Connections
                     </div>
                 </div>
-                <img src="img/equals.svg" alt="equals">
+                <img class="vision_formula_images" src="img/equals.svg" alt="equals">
                 <div class="vision_formula_borders">
                     <div class="vision_formula_item">
                         Scale to the
@@ -172,6 +172,9 @@
                             / strategy</div>
                     </div>
                 </div>
+
+
+
 <!--                <div class="team_item">-->
 <!--                    <img src="img/team_three.svg" alt="team_three">-->
 <!--                    <div class="team_text">-->
@@ -181,7 +184,21 @@
 <!--                        <div class="team_text_desc">operational efficience <br>/ technology</div>-->
 <!--                    </div>-->
 <!--                </div>-->
+
             </div>
+        </div>
+        <div class="team_item_extended">
+            <img src="img/team_one.svg" alt="team_one">
+            <div class="team_text">
+                <div class="team_text_title">Abdumalik </br>Mirakhmedov</div>
+                <div class="divider"></div>
+                <div class="team_text_desc">global finance <br>
+                    / strategy</div>
+            </div>
+            <div class="team_text_extended">TTESTTESTTESTTESTTESTTESTTESTяяT
+            TESTTESTTESTTESTTESTTT
+            TESTTESTTESTTESTTESTT</div>
+            <div class="close_button">X</div>
         </div>
     </section>
     <section class="projects" id="projects">
@@ -280,6 +297,7 @@
     <script src="js/miniature.earth.js"></script>
 <!--    <script src="js/miniature.earth.core.js"></script>-->
     <script src="js/bundle.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
