--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/styles.min.css">
+    <meta name="format-detection" content="telephone=no">
+    <link rel="stylesheet" href="css/styless.min.css">
     <title>The Paragon</title>
 </head>
 
@@ -24,9 +25,9 @@
                 <li class="header_menu_item">
                     <a href="#team" class="header_menu_link">Who we are</a>
                 </li>
-                <li class="header_menu_item">
-                    <a href="#projects" class="header_menu_link">Investments</a>
-                </li>
+<!--                <li class="header_menu_item">-->
+<!--                    <a href="#projects" class="header_menu_link">Investments</a>-->
+<!--                </li>-->
                 <li class="header_menu_item">
                     <a href="#geography" class="header_menu_link">Global Network</a>
                 </li>
@@ -50,9 +51,9 @@
                     <li class="side_menu_item">
                         <a href="#team" class="side_menu_link">Team</a>
                     </li>
-                    <li class="side_menu_item">
-                        <a href="#projects" class="side_menu_link">Projects</a>
-                    </li>
+<!--                    <li class="side_menu_item">-->
+<!--                        <a href="#projects" class="side_menu_link">Investments</a>-->
+<!--                    </li>-->
                     <li class="side_menu_item">
                         <a href="#geography" class="side_menu_link">Geography</a>
                     </li>
@@ -183,80 +184,80 @@
             </div>
         </div>
     </section>
-    <section class="projects" id="projects">
-        <div class="container">
-            <h1 class="projects_title">Investments</h1>
-            <div class="projects_wrapper">
-                <div class="projects_block">
-                    <a href="https://scalotech.com/" target="_blank" class="projects_company_v2" style="padding-top: 0!important;">
-                        <img src="img/scalo.svg" alt="scalo" class="projects_img">
-                    </a>
-                    <div class="projects_divider"></div>
-                    <a href="https://www.megarender.com/" target="_blank" class="projects_company_v2">
-                        <img src="img/megarender.svg" alt="megarender" class="projects_img">
+<!--    <section class="projects" id="projects">-->
+<!--        <div class="container">-->
+<!--            <h1 class="projects_title">Investments</h1>-->
+<!--            <div class="projects_wrapper">-->
+<!--                <div class="projects_block">-->
+<!--                    <a href="https://scalotech.com/" target="_blank" class="projects_company_v2" style="padding-top: 0!important;">-->
+<!--                        <img src="img/scalo.svg" alt="scalo" class="projects_img">-->
+<!--                    </a>-->
+<!--                    <div class="projects_divider"></div>-->
+<!--                    <a href="https://www.megarender.com/" target="_blank" class="projects_company_v2">-->
+<!--                        <img src="img/megarender.svg" alt="megarender" class="projects_img">-->
 
-                    </a>
-                </div>
-
-                <div class="projects_block">
-                    <a href="https://voctiv.com/" target="_blank" class="projects_company_v2">
-                        <img src="img/voctiv.svg" alt="voctiv" class="projects_img">
-                    </a>
-                    <div class="projects_divider"></div>
-                    <a href="https://handl.ai/" target="_blank" class="projects_company_v2">
-                        <img src="img/handl.svg" alt="handl" class="projects_img">
-                    </a>
-                </div>
-
-
-                <div class="projects_block">
-                    <a href="https://townx.com/" target="_blank" class="projects_company_v2">
-                        <img src="img/town_x.svg" alt="town_x" class="projects_img">
-                    </a>
-                    <div class="projects_divider"></div>
-                    <a href="https://genesisdigitalassets.com/" target="_blank" class="projects_company_v2">
-                        <img src="img/genesis.svg" alt="genesis" class="projects_img">
-                    </a>
-                </div>
-            </div>
-<!--            <h1 class="projects_subtitle">Frontier (IT)</h1>-->
-<!--            <div class="projects_company single_company" style="margin-top: 32px">-->
-<!--                <img src="img/scalo.svg" alt="scalo" class="projects_img">-->
-<!--                <div class="projects_arrow"></div>-->
-<!--            </div>-->
-<!--            <div class="projects_companies">-->
-<!--                <div class="projects_company">-->
-<!--                    <img src="img/handl.svg" alt="handl" class="projects_img">-->
-<!--                    <div class="projects_arrow"></div>-->
+<!--                    </a>-->
 <!--                </div>-->
-<!--                <div class="projects_company">-->
-<!--                    <img src="img/voctiv.svg" alt="voctiv" class="projects_img">-->
-<!--                    <div class="projects_arrow"></div>-->
+
+<!--                <div class="projects_block">-->
+<!--                    <a href="https://voctiv.com/" target="_blank" class="projects_company_v2">-->
+<!--                        <img src="img/voctiv.svg" alt="voctiv" class="projects_img">-->
+<!--                    </a>-->
+<!--                    <div class="projects_divider"></div>-->
+<!--                    <a href="https://handl.ai/" target="_blank" class="projects_company_v2">-->
+<!--                        <img src="img/handl.svg" alt="handl" class="projects_img">-->
+<!--                    </a>-->
 <!--                </div>-->
-<!--                <div class="projects_company">-->
-<!--                    <img src="img/megarender.svg" alt="megarender" class="projects_img">-->
-<!--                    <div class="projects_arrow"></div>-->
-<!--                </div>-->
-<!--            </div>-->
-<!--            <div class="projects_companies no_line" style="margin-top: 150px">-->
-<!--                <div class="projects_subcompany">-->
-<!--                    <h1 class="projects_subtitle" style="margin-top: unset; margin-bottom: 56px">Shared Economy <br>-->
-<!--                        Real Estate</h1>-->
-<!--                    <div class="projects_company no_line">-->
+
+
+<!--                <div class="projects_block">-->
+<!--                    <a href="https://townx.com/" target="_blank" class="projects_company_v2">-->
 <!--                        <img src="img/town_x.svg" alt="town_x" class="projects_img">-->
-<!--                        <div class="projects_arrow"></div>-->
-<!--                    </div>-->
-<!--                </div>-->
-<!--                <div class="projects_subcompany">-->
-<!--                    <h1 class="projects_subtitle" style="margin-top: unset; margin-bottom: 73px">High-Load <br>Infrastructure</h1>-->
-<!--                    <div class="projects_company no_line">-->
+<!--                    </a>-->
+<!--                    <div class="projects_divider"></div>-->
+<!--                    <a href="https://genesisdigitalassets.com/" target="_blank" class="projects_company_v2">-->
 <!--                        <img src="img/genesis.svg" alt="genesis" class="projects_img">-->
-<!--                        <div class="projects_arrow"></div>-->
-<!--                    </div>-->
+<!--                    </a>-->
 <!--                </div>-->
 <!--            </div>-->
-        </div>
-    </section>
+<!--&lt;!&ndash;            <h1 class="projects_subtitle">Frontier (IT)</h1>&ndash;&gt;-->
+<!--&lt;!&ndash;            <div class="projects_company single_company" style="margin-top: 32px">&ndash;&gt;-->
+<!--&lt;!&ndash;                <img src="img/scalo.svg" alt="scalo" class="projects_img">&ndash;&gt;-->
+<!--&lt;!&ndash;                <div class="projects_arrow"></div>&ndash;&gt;-->
+<!--&lt;!&ndash;            </div>&ndash;&gt;-->
+<!--&lt;!&ndash;            <div class="projects_companies">&ndash;&gt;-->
+<!--&lt;!&ndash;                <div class="projects_company">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <img src="img/handl.svg" alt="handl" class="projects_img">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <div class="projects_arrow"></div>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                <div class="projects_company">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <img src="img/voctiv.svg" alt="voctiv" class="projects_img">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <div class="projects_arrow"></div>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                <div class="projects_company">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <img src="img/megarender.svg" alt="megarender" class="projects_img">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <div class="projects_arrow"></div>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;            </div>&ndash;&gt;-->
+<!--&lt;!&ndash;            <div class="projects_companies no_line" style="margin-top: 150px">&ndash;&gt;-->
+<!--&lt;!&ndash;                <div class="projects_subcompany">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <h1 class="projects_subtitle" style="margin-top: unset; margin-bottom: 56px">Shared Economy <br>&ndash;&gt;-->
+<!--&lt;!&ndash;                        Real Estate</h1>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <div class="projects_company no_line">&ndash;&gt;-->
+<!--&lt;!&ndash;                        <img src="img/town_x.svg" alt="town_x" class="projects_img">&ndash;&gt;-->
+<!--&lt;!&ndash;                        <div class="projects_arrow"></div>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                <div class="projects_subcompany">&ndash;&gt;-->
+<!--&lt;!&ndash;                    <h1 class="projects_subtitle" style="margin-top: unset; margin-bottom: 73px">High-Load <br>Infrastructure</h1>&ndash;&gt;-->
+<!--&lt;!&ndash;                    <div class="projects_company no_line">&ndash;&gt;-->
+<!--&lt;!&ndash;                        <img src="img/genesis.svg" alt="genesis" class="projects_img">&ndash;&gt;-->
+<!--&lt;!&ndash;                        <div class="projects_arrow"></div>&ndash;&gt;-->
+<!--&lt;!&ndash;                    </div>&ndash;&gt;-->
+<!--&lt;!&ndash;                </div>&ndash;&gt;-->
+<!--&lt;!&ndash;            </div>&ndash;&gt;-->
+<!--        </div>-->
+<!--    </section>-->
 <!--    FIXME temporary empty-->
     <section class="network" id="geography">
         <div class="container">
