Description for team members

--- a/src/index.html
+++ b/src/index.html
@@ -195,10 +195,8 @@
                 <div class="team_text_desc">global finance <br>
                     / strategy</div>
             </div>
-            <div class="team_text_extended">TTESTTESTTESTTESTTESTTESTTESTяяT
-            TESTTESTTESTTESTTESTTT
-            TESTTESTTESTTESTTESTT</div>
-            <div class="close_button">X</div>
+            <div class="team_text_extended">A London Business School Alumnus (EMBA), serial entrepreneur and investor with business interests in HPC, AI, SaaS, development and telecommunications sectors.  He has over 15 years of experience across telecommunication, mining, real estate, HPC, asset management and banking industries.` </div>
+            <div class="close_button">x</div>
         </div>
     </section>
     <section class="projects" id="projects">
